# KubixAI_CLI_Backend

./: README.md  SETUP.md  setup.sh
kubix-agent/: CHANGELOG.md  README.md  analysis.py  bench.py  export_hf.py  extract.py  kernel.py  kubix_agent_colab.ipynb  orchestrate.py  prepare.py  profile.py  program.md  pyproject.toml  verify.py
kubix-agent/kernelbench/: __init__.py  bench_kb.py  bridge.py  program_kb.md
kubix-agent/kernels/: cross_entropy.py  flash_attention.py  fused_mlp.py  layernorm.py  reduce.py  rmsnorm.py  rotary_embedding.py  softmax.py
kubix-agent/kernels/cuda/: _compile.py  cross_entropy.py  flash_attention.py  fused_mlp.py  layernorm.py  matmul.py  reduce.py  rmsnorm.py  rotary_embedding.py  softmax.py
kubix-agent/models/: __init__.py  bert_base.py  gpt2.py  llama_7b.py
kubix-ci/: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
kubix-ci/.github/workflows/: ci.yml  gpu-test-advanced.yml  gpu-test.yml  publish.yml  self-hosted-gpu.yml
kubix-ci/docs/: github-actions.md  providers.md
kubix-ci/examples/: matmul.cu  simple_kernel.cu  vector_add.cu
kubix-ci/kubix_ci/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  reporter.py  runner.py  timing.py
kubix-ci/kubix_ci/providers/: __init__.py  base.py  brev.py  fluidstack.py  lambdalabs.py  runpod.py  ssh.py  vastai.py
kubix-cli/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  kubix.py  pyproject.toml
kubix-cli/.github/workflows/: release.yml  test.yml
kubix-cli/examples/config-examples/: default.json
kubix-cli/kubix_cli/: __main__.py  cache.py  chat_agent.py  cli_minimal.py  compiler.py  exceptions.py  interactive.py  logger.py  openrouter.py  openrouter_v2.py
kubix-cli/kubix_cli/agents/: __init__.py  analyzer_agent.py  base_agent.py  cuda_agent.py  enhanced_base_agent.py  general_agent.py  optimizer_agent.py
kubix-cli/kubix_cli/ai/: __init__.py  async_client.py
kubix-cli/kubix_cli/backends/: __init__.py  base.py  cuda_backend.py
kubix-cli/kubix_cli/config/: __init__.py  manager.py  schema.py
kubix-cli/kubix_cli/core/: __init__.py  async_optimizer.py
kubix-cli/kubix_cli/permissions/: __init__.py
kubix-cli/kubix_cli/plugins/: __init__.py  manager.py
kubix-cli/kubix_cli/sessions/: __init__.py  exporter.py  manager.py  storage.py
kubix-cli/kubix_cli/tools/: __init__.py  analyze_cuda.py  base.py  benchmark_cuda.py  compile_cuda.py  profile_cuda.py  registry.py
kubix-cli/kubix_cli/ui/: __init__.py  input_box.py  interactive_help.py  layout.py  modern_input.py  post_edit_prompts.py  setup_wizard.py  theme.py  thinking_spinner.py  tool_display.py
kubix-cli/kubix_cli/utils/: __init__.py  detection.py  suppress_warnings.py  validation.py
kubix-mcp/: .gitignore  LICENSE  README.md  package-lock.json  package.json  server.json  smithery.yaml  tsup.config.ts
kubix-mcp/.github/workflows/: ci.yml  release.yml
kubix-mcp/src/: constants.ts  server.ts  types.ts
kubix-mcp/src/api/: kubix-client.ts  sse-consumer.ts
kubix-mcp/src/auth/: oauth-client.ts  token-store.ts
kubix-mcp/src/prompts/: forge-analyze.ts  forge-optimize.ts
kubix-mcp/src/resources/: auth-status.ts  credits.ts
kubix-mcp/src/tools/: forge-auth.ts  forge-cancel.ts  forge-credits.ts  forge-generate.ts  forge-optimize.ts  forge-sessions.ts  forge-status.ts
