[project]
name = "kubix-agent"
version = "0.1.0"
description = "Kubix Agent — Autonomous AI GPU kernel optimizer for any PyTorch model"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Kubix AI", email = "hello@kubix.ai"}]
license = "MIT"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "torch>=2.4.0",
]

# triton is Linux+CUDA only — install separately on GPU servers:
# pip install triton>=3.3.0

[project.urls]
Homepage = "https://kubix.ai"
Repository = "https://github.com/Kubix-AI/kubix-agent"
Documentation = "https://docs.kubix.ai"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "kernels*", "kernelbench*"]

[project.optional-dependencies]
models = [
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
    "safetensors>=0.5.0",
]
cuda = [
    "ninja>=1.11.0",
    "triton>=3.3.0",
]
kernelbench = [
    "datasets>=2.16.0",
]
profiling = [
    "HolisticTraceAnalysis>=0.2.0",
]
hf-kernels = [
    "kernels>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
